Vector index: do not go OOM